--- a/src/components/styles/Slider.scss
+++ b/src/components/styles/Slider.scss
@@ -1,4 +1,5 @@
 .Slider {
+  border: 1px solid red;
   display: flex;
   height: 80vh;
   margin: 0 auto;
@@ -11,6 +12,7 @@
   .wrapper {
     display: inline-flex;
     position: absolute;
-    left: 0%;
+    left: 3%;
+    transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   }  
 }
