Incluido Custom Card y modificaci[on de algunos estilos

--- a/src/components/styles/Card.scss
+++ b/src/components/styles/Card.scss
@@ -1,9 +1,8 @@
 .Card {
   border: 1px solid #cac9c9;
-  width: 100px;
-  height: 100px;
+  min-width: 106px;
+  height: 110px;
   border-radius: 0.25em;
-  padding-bottom: 4px;
   margin: 1%;
   .Mural-size {
     height: 70%;
