--- a/src/components/styles/CustomForm.scss
+++ b/src/components/styles/CustomForm.scss
@@ -12,7 +12,15 @@
         width: 80px;
         height: 38px;
         border-radius: 5px;
-        border: 1px solid $primaryGray;
+        border: 1px solid $primaryGray; 
+        &[type=number]::-webkit-inner-spin-button, 
+        &[type=number]::-webkit-outer-spin-button { 
+          -webkit-appearance: none; 
+          margin: 0; 
+        }
+        &[type=number] {
+            -moz-appearance:textfield;
+        }
       }
       label {
         color: $primaryGray;
