Validaciones de Formulario (Aun no esta funcional)

--- a/src/components/styles/CustomForm.scss
+++ b/src/components/styles/CustomForm.scss
@@ -21,6 +21,10 @@
         &[type=number] {
             -moz-appearance:textfield;
         }
+        &:focus {
+          outline: 0px;
+          border-color: $successColor;
+        }
       }
       label {
         color: $primaryGray;
@@ -41,6 +45,11 @@
       margin: 10px;
       bottom: 0;   
       font-size: 15px; 
+      &:disabled{
+        background-color: $primaryGray;
+        border-color: $primaryGray;
+        color: $secondGray;
+      }
     }
   }
 }
