--- a/src/components/styles/Slider.scss
+++ b/src/components/styles/Slider.scss
@@ -1,7 +1,6 @@
 @import "./variables.scss";
 
 .Slider {
-  border: 1px solid red;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -10,10 +9,12 @@
   margin: 0 auto;
   overflow-x: hidden;
   margin-top: 5%;
+  background: white;
+  border-radius: 0.25em;
   .wrapper {
     display: inline-flex;
     left: 3%;
-    transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    transition: transform 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   }
   h4 {
     color: $secondGray;
