--- a/src/components/styles/CustomForm.scss
+++ b/src/components/styles/CustomForm.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "../../assets/styles/variables";
 
 .CustomForm {
   form{
@@ -29,6 +29,7 @@
       }
       label {
         color: $primaryGray;
+        font-family: "ProximaNova-Light";
         position: absolute;
         font-size: 11px;
         top: 0;
@@ -46,6 +47,7 @@
       margin: 10px;
       bottom: 0;   
       font-size: 16px; 
+      font-family: "ProximaNova-Light";
       &:disabled{
         background-color: #e0e0e0;
         border-color: #e0e0e0;
