--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,13 @@
+@import "/assets/styles/fonts";
+
 html {
   background: #f1f1f1;
 }
 body {
+  font-family: "ProximaNova";
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
