--- a/src/components/styles/Card.scss
+++ b/src/components/styles/Card.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "../../assets/styles/variables";
 
 .Card {
   color: $primaryGray;
@@ -41,6 +41,8 @@
   }
   p:first-of-type {
     color: $secondGray;
+    font-size: 12px;
+    font-weight: 600;
   }
 }
 
