Actualizaci[on de README.md y comentarios en el código

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,5 @@
+//Colores utilizados para todo el slider
+
 $primaryGray: #cac9c9;
 $secondGray: #949292;
-$successColor: #ff3681;;
+$successColor: #ff3681;
